--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,8 @@
 {
     "plugins": [
         "transform-decorators-legacy",
-        "transform-class-properties"
+        "transform-class-properties",
+        "transform-runtime"
     ],
     "presets": [
         "stage-0",
