--- a/package.json
+++ b/package.json
@@ -2,11 +2,10 @@
   "name": "react-alt-esnext-template",
   "version": "1.0.0",
   "description": "React flux template using ESNext",
-  "main": "index.jsx",
+  "main": "src/index.jsx",
   "scripts": {
-    "start": "webpack-dev-server --colors --progress --config ./webpack/dev.babel.js --host 0.0.0.0",
-    "build": "webpack -p --colors --progress --config ./webpack/prod.babel.js",
-    "test": "echo 1"
+    "start": "cross-env BABEL_ENV=development webpack-dev-server --progress --config ./webpack/dev.babel.js",
+    "build": "cross-env BABEL_ENV=production webpack -p --colors --progress --config ./webpack/prod.babel.js"
   },
   "keywords": [
     "react",
@@ -19,30 +18,36 @@
     "type": "git",
     "url": "https://github.com/rherwig/react-alt-esnext-template"
   },
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
-    "alt": "^0.18.4",
-    "alt-utils": "^1.0.0",
+    "autoprefixer": "^6.5.3",
     "babel-core": "^6.10.4",
     "babel-loader": "^6.2.4",
     "babel-plugin-transform-class-properties": "^6.10.2",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-react-remove-prop-types": "^0.2.10",
     "babel-plugin-transform-runtime": "^6.12.0",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
     "babel-runtime": "^6.11.6",
+    "cross-env": "^3.1.3",
     "css-loader": "^0.23.1",
-    "es6-symbol": "^3.1.0",
-    "immutable": "^3.8.1",
+    "html-webpack-plugin": "^2.24.1",
     "node-sass": "^3.8.0",
-    "object-assign": "^4.1.0",
-    "react": "^15.3.0",
-    "react-dom": "^15.3.0",
-    "react-hot-loader": "^1.3.0",
+    "postcss-loader": "^1.1.1",
+    "react-hot-loader": "^3.0.0-beta.6",
     "sass-loader": "^4.0.0",
     "style-loader": "^0.13.1",
-    "webpack": "^1.13.1",
-    "webpack-dev-server": "^1.14.1"
+    "webpack": "^1.13.3",
+    "webpack-dev-server": "^1.16.2"
+  },
+  "dependencies": {
+    "alt": "^0.18.6",
+    "alt-utils": "^1.0.0",
+    "es6-symbol": "^3.1.0",
+    "immutable": "^3.8.1",
+    "react": "^15.3.2",
+    "react-dom": "^15.3.2"
   }
 }
